; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_equalizer.c_vlclua_equalizer_enable.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_equalizer.c_vlclua_equalizer_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"equalizer\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_equalizer_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_equalizer_enable(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @luaL_checkboolean(i32* %5, i32 1)
  store i32 %6, i32* %3, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* @vlclua_get_aout_internal(i32* %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @aout_EnableFilter(i32* %12, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @aout_Release(i32* %15)
  br label %17

17:                                               ; preds = %11, %1
  ret i32 0
}

declare dso_local i32 @luaL_checkboolean(i32*, i32) #1

declare dso_local i32* @vlclua_get_aout_internal(i32*) #1

declare dso_local i32 @aout_EnableFilter(i32*, i8*, i32) #1

declare dso_local i32 @aout_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
